1. 전체매출현황 프론트엔드 완료

--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -30,6 +30,7 @@
             }
 
             function fn_href(obj) {
+                document.getElementById('menuTitle').innerHTML = obj.text;
                 sendData(obj.dataset.path);
             }
         </script>
@@ -40,6 +41,7 @@
             <a class="navbar-brand ps-3">BIZ Delivery</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <h5 id="menuTitle" style="color:white;"></h5>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
                 <div class="input-group">
