--- a/src/main/resources/templates/pages/salePlusItem.html
+++ b/src/main/resources/templates/pages/salePlusItem.html
@@ -58,7 +58,7 @@
               str += '          <thead> ';
               str += '          <tr> ';
               str += '            <th style=\"width:100px;\" class=\"td_border2\">점포명</th> ';
-              str += '            <th style=\"width:100px;\" class=\"td_border2\">상품명</th> ';
+              str += '            <th style=\"width:100px;\" class=\"td_border2\">추가상품명</th> ';
               str += '            <th style=\"width:100px;\" class=\"td_border2\">매출일자</th> ';
               str += '            <th style=\"width:100px;\" class=\"td_border2\">영수증번호</th> ';
               str += '            <th style=\"width:100px;\" class=\"td_border2\">총금액</th> ';
@@ -117,7 +117,7 @@
           <thead>
           <tr>
             <th style="width:100px;" class="td_border2">점포명</th>
-            <th style="width:100px;" class="td_border2">상품명</th>
+            <th style="width:100px;" class="td_border2">추가상품명</th>
             <th style="width:100px;" class="td_border2">매출일자</th>
             <th style="width:100px;" class="td_border2">영수증번호</th>
             <th style="width:100px;" class="td_border2">총금액</th>
