1. 리뷰 페이징 완료

--- a/src/main/resources/templates/pages/item.html
+++ b/src/main/resources/templates/pages/item.html
@@ -706,7 +706,7 @@
 </head>
 <body>
 <div id="div_top" class="card" style="width:100%; height:5%">
-  <div id="btnZone1" style="float:left; margin:5px 5px 5px 5px;">
+  <div id="btnZone1" style="float:left; margin-right:5px;">
     <nav style="float:right; display:inline-block;">
       <input id="saveStoreId" type="hidden">
       <button class="button_2" onclick="fn_add();">추가</button>
