--- a/src/main/resources/templates/pages/store.html
+++ b/src/main/resources/templates/pages/store.html
@@ -497,9 +497,15 @@
           <td>
             <select class="input1" id="storeOperTimeI" onchange="fn_update(this, 'opertime'); return false;">
               <option value="">- 선택 -</option>
-              <option value="A">운영중</option>
-              <option value="B">휴점</option>
-              <option value="C">폐업</option>
+              <option value="chicken">치킨</option>
+              <option value="pizza">피자</option>
+              <option value="burger">버거</option>
+              <option value="cafe">카페</option>
+              <option value="korean">한식</option>
+              <option value="japan">일식</option>
+              <option value="china">중식</option>
+              <option value="western">양식</option>
+              <option value="night">야식</option>
             </select>
           </td>
         </tr>
